    - Strongboxes are now removed if the "parent" hex core is deleted.
  Balancing:
    - Added mod setting that toggles the allowance of two-headed trains in trading.
    - Changed the default value for the base trade efficiency setting from 1.0 to 0.8, where at least 25% trade productivity is required to create infinite coin loops.
  Bugfixes:
    - Fixed the game crashing upon destroying your car and a biter/spitter spawner in the same collision.
    - Fixed that disconnecting from a server (losing connection, being kicked, force-quitting, etc.) was teleporting you to your remote view location upon rejoining.
    - Fixed that the claim hexes tool wasn't taking coins from the piggy bank when in remote view.
    - Fixed that sometimes a hex core's GUI wouldn't update when one of its trades is made.
    - Fixed that quests requiring to kill entities using a specific damage type was not using localization for the damage type.
    - Fixed that quest reward items given to dead players (waiting to respawn) were being dropped off at Nauvis spawn.  This pertains to the "Electrocution" quest.
    - Fixed some migration issues from 1.3.1 saves and older.
    - Fixed immediate crashes when trying to downgrade the Hextorio version on a save.
        This does not mean perfect compatibility, but instead the crash on save load is fixed.
  Scripting:
    - Added remote interfaces.
  Optimizations:
    - Optimized overall trading performance. The improvement is proportional to the number of players online at once.
    - Slightly optimized coin calculations.
    - Optimized random trade generation.
---------------------------------------------------------------------------------------------------
Version: 1.5.10
Date: 25/1/26
  Bugfixes:
    - Fixed the game crashing upon placing a mining drill.
    - Fixed the game crashing upon breaking a strongbox on a save created with version 1.5.9.
    - Fixed the game crashing upon finding trades with expensive items in them.