@@ -72,6 +72,8 @@ item-values-imported=Item values successfully imported.
 feature-locked=Unlock __1__ from the __2__ quest to use this feature.
 quest-disabled=Quest disabled: __1__
 dungeon-nearby-prevented-tp=[img=utility.warning_icon] Warning! That hex is adjacent to an unlooted dungeon. Teleport again to confirm.
+lightning-anim-1=[img=space-location.fulgora] The Goddess of Lightning is done waiting.
+lightning-anim-2=[img=entity.lightning] The skies answer from every horizon.
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
